# agentic-ai-practice

./: main.py  pyproject.toml  requirements.txt
lang/: intro.ipynb  modelintegration.ipynb  tools.ipynb
langchain/: app.py  fastapichat.py  lamma.py
